Fix if statement condition in update_client/action_wait.cc

BUG=659656

Review-Url: https://codereview.chromium.org/2453783002
Cr-Commit-Position: refs/heads/master@{#427716}

Former-commit-id: 573b7d14fc16c2732354544704bf68f967faeb3d